--- a/src/App.css
+++ b/src/App.css
@@ -7,3 +7,21 @@
 .mainPage{
   flex-grow: 1;
 }
+
+@media screen and (min-width: 576px) and (max-width: 767px) {
+  .listaVacia{
+    width: 80%;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 991px) {
+  .listaVacia{
+    width: 66.6%;
+  }
+}
+
+@media screen and (min-width: 991px) {
+  .listaVacia{
+    width: 50%;
+  }
+}
